<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:orientation="vertical"
                                                 tools:context=".activities.NewWishActivity">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground_unicorn"
                android:id="@+id/wish_photo"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/wish_photo"
                      android:id="@+id/linearLayout21"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp">
            <Button
                    android:text="@string/button_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_camera"
                    android:textColor="@color/whiteText"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="parent"/>
            <Button
                    android:text="@string/button_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_gallery"
                    android:textColor="@color/whiteText"
                    app:backgroundTint="@color/colorPrimaryDark"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:id="@+id/input_name"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout21"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_description"
                  android:id="@+id/input_description"
                  app:layout_constraintTop_toBottomOf="@+id/input_name"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="8dp"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginEnd="8dp"
                  app:layout_constraintEnd_toEndOf="parent"/>
        <Button
                android:text="@string/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_save"
                android:textColor="@color/whiteText"
                app:backgroundTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/input_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>